fixed top bar shrinking too much

--- a/lodging-frontend/src/app/layout/top-bar/top-bar.component.scss
+++ b/lodging-frontend/src/app/layout/top-bar/top-bar.component.scss
@@ -3,6 +3,7 @@
 
 .container {
     height: 6vh;
+    min-height: 50px;
     background-color: #f6f6f6;
     border-bottom: 1px solid lightgray;
     box-shadow: 0 2px 10px 5px lightgray;
